resources paths were configured to be accessible in jar execution